# coltre_bot

./: README.md  coltredb.sql  pyproject.toml  Диаграмма приложения.drawio  Диаграмма сервисов.drawio
coltre_bot/: bot.py  config.py  configurator.py  exceptions.py
coltre_bot/core/: db.py  exercise.py
coltre_bot/core/models/: exercise.py  training_level.py
coltre_bot/core/service/: exercise.py  membership_request.py  training_level.py  user.py
coltre_bot/handlers/: base_handler_with_templates.py  current_program_handler.py  help_handler.py  join_handler.py  keyboards.py  start_handler.py
coltre_bot/templates/: current_program.py  help.j2  help.py  renderer.py  start.j2  start.py  timezone_preview.j2  timezone_request.j2  training_level_preview.j2  training_level_request.j2
