[tool.poetry]
name = "coltre-bot"
version = "0.1.0"
description = ""
authors = ["laga-vladislav <laga.ladislav@yandex.ru>"]
readme = "README.md"
packages = [{include = "coltre_bot"}]

[tool.poetry.dependencies]
python = "^3.11"
pytelegrambotapi = "^4.13.0"
aiohttp = "^3.8.5"
aiomysql = "^0.2.0"
cryptography = "^41.0.3"
configparser = "^6.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
